Added button to control status textarea

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "Azure": {
     "SignalR": {
-      "ConnectionString": ""
+      "ConnectionString": "Endpoint=https://suitcase-demo-signalr.service.signalr.net;AccessKey=bWYk2p+V4LfBUYa3yBOMACGfP7GA1ud/5R1vgfyrRqQ=;Version=1.0;"
     }
   }
 }
