--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,18 @@
   "AllowedHosts": "*",
   "Azure": {
     "SignalR": {
-      "ConnectionString": "Endpoint=https://suitcase-demo-signalr.service.signalr.net;AccessKey=bWYk2p+V4LfBUYa3yBOMACGfP7GA1ud/5R1vgfyrRqQ=;Version=1.0;"
+      "ConnectionString": ""
+    },
+    "SuitcaseDemoSetting": {
+      "Camera_1_ID": "",
+      "Camera_2_ID": "",
+      "Camera_3_ID": ""
+    },
+    "ConsoleSettings": {
+      "BaseUrl": "",
+      "AppClientId": "",
+      "AppSecret": "",
+      "BaseUrlToken": ""
     }
   }
 }
