--- a/appsettings.json
+++ b/appsettings.json
@@ -8,19 +8,14 @@
   "AllowedHosts": "*",
   "Azure": {
     "SignalR": {
-      "ConnectionString": "Endpoint=https://suitcase-demo-signalr.service.signalr.net;AccessKey=bWYk2p+V4LfBUYa3yBOMACGfP7GA1ud/5R1vgfyrRqQ=;Version=1.0;"
+      "ConnectionString": ""
     },
     "SuitcaseDemoSetting": {
-      "Camera_1_ID": "sid-100A50500A2011003964012000000000", //DN-T3-1
-      "Camera_2_ID": "sid-100A50500A2014083064012000000000" //DN-T3-2
-      //"Camera_1_ID": "sid-100A50500A2013082064012000000000",
-      //"Camera_2_ID": "sid-100A50500A2013098864012000000000"
-      //"Camera_3_ID": "sid-100A50500A2013098864012000000000"
     },
     "ConsoleSettings": {
       "BaseUrl": "https://us.console.aitrios.sony-semicon.com/api/v1",
-      "AppClientId": "0oa5agv278iYY9Umr697",
-      "AppSecret": "bFVWyKcG4TXpmr6BIhIGE78zL5t296CreQoJiJYK",
+      "AppClientId": "",
+      "AppSecret": "",
       "BaseUrlToken": "https://auth.aitrios.sony-semicon.com/oauth2/default/v1/token"
     }
   }
